@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.antenna.gr" version="1.2.0" name="ANT1 Player" provider-name="Twilight0">
+<addon id="plugin.video.antenna.gr" version="1.2.1" name="ANT1 Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
 		<import addon="script.module.tulip" version="1.3.4" />
@@ -19,6 +19,9 @@
 		<website>http://www.antenna.gr/</website>
         <size>692701</size>
 		<news>
+[B]1.2.1[/B]
+- Minor correction in live resolver
+
 [B]1.2.0[/B]
 - Enhanced live stream resolver
 - Added resolver for VOD content when called from other addons
